Reconfiguration of pom files for HTML5 client setup

--- a/Client/src/main/webapp/error.html
+++ b/Client/src/main/webapp/error.html
@@ -40,8 +40,8 @@
         <div class="container">
 
           <div class="starter-template">
-            <h1>Inspection framework</h1>
-            <p class="lead">This is the home page of the inspection framework application prototype</p>
+            <h1>Error page</h1>
+            <p class="lead">This is the error page of the inspection framework application prototype</p>
           </div>
 
         </div><!-- /.container -->
